--- a/app/src/main/res/layout/fragment_medical_services.xml
+++ b/app/src/main/res/layout/fragment_medical_services.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.hospital.medical_services.MedicalServicesFragment">
     <ProgressBar
-        android:id="@+id/loadingProgressBar"
+        android:id="@+id/AccountLoadingProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
