--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@color/colorPrimaryVariant"
+    android:background="@color/colorPrimary"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -12,17 +12,18 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/profileImageView"
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
         android:adjustViewBounds="true"
-        android:layout_gravity="center_vertical"
-
         android:contentDescription="@string/nav_header_desc"
+        android:outlineProvider="background"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/carecall_logo" />
+        android:scaleType="centerInside"
+        app:shapeAppearanceOverlay="@style/CircleImageShape"
+        app:srcCompat="@drawable/ic_ambulance" />
 
     <TextView
         style="@style/text24whiteBold"
