--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.carecallapp.ui.hospital.HomeFragment"
+        android:name="com.example.carecallapp.ui.hospital.home.HomeFragment"
         tools:layout="@layout/fragment_home" />
 
 
