--- a/app/src/main/res/layout/medical_services_item.xml
+++ b/app/src/main/res/layout/medical_services_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="8dp"
+    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="8dp"
     app:layout_constraintBottom_toBottomOf="@+id/doctorSelectCV"
     app:layout_constraintStart_toStartOf="@+id/doctorSelectCV"
