--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,12 +14,12 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/profileImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="150dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_gravity="center"
         android:adjustViewBounds="true"
+        android:background="@color/white"
         android:contentDescription="@string/nav_header_desc"
-        android:outlineProvider="background"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:scaleType="centerInside"
         app:shapeAppearanceOverlay="@style/CircleImageShape"
@@ -27,10 +27,11 @@
 
     <TextView
         style="@style/text24whiteBold"
+        android:background="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/nav_header_title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:text="@string/nav_header_title" />
+
 
 </LinearLayout>
