repair delete in blood bank and complete room(nursery-emergency) service(add-get) without delete have problem after delete it say not found but delete successful

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
     <color name="colorOnSecondary">#000000</color>
     <color name="colorHome">#DAE0ED</color>
     <color name="red">#FF0000</color>
+    <color name="green">#029B17</color>
+    <color name="nile_color">#E507489E</color>
 
 </resources>
