--- a/app/src/main/res/layout/fragment_hospital_update_profile.xml
+++ b/app/src/main/res/layout/fragment_hospital_update_profile.xml
@@ -15,16 +15,17 @@
         android:orientation="vertical"
         android:padding="15dp"
         app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.imageview.ShapeableImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profileImage"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            app:civ_border_width="2dp"
+            app:civ_border_color="@color/black"
             android:layout_gravity="center"
             android:src="@drawable/ic_ambulance"
-            app:shapeAppearanceOverlay="@style/CircleImageShape"
-            app:strokeColor="@color/colorPrimary"
-            app:strokeWidth="2dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnChangePhoto"
