--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,14 +23,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <FrameLayout
-            android:id="@+id/fragmentContainer"
+        <androidx.fragment.app.FragmentContainerView
+
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            android:windowSoftInputMode="adjustPan"
-            android:background="@color/whiteSmoke" />
-
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/mobile_navigation" />
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
