--- a/app/src/main/res/layout/fragment_hospital_profile.xml
+++ b/app/src/main/res/layout/fragment_hospital_profile.xml
@@ -10,8 +10,7 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        tools:context=".ui.hospital.HospitalActivity">
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
