--- a/app/src/main/res/layout/fragment_hospital_update_profile.xml
+++ b/app/src/main/res/layout/fragment_hospital_update_profile.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@color/white"
-    tools:context=".ui.hospital.HospitalActivity">
+    android:background="@color/white">
 
     <LinearLayout
         android:id="@+id/linearLayout"
