--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
+    <group android:checkableBehavior="single">
+
         <item
             android:id="@+id/nav_home_iconMenu"
             android:icon="@drawable/ic_home_blue"
@@ -19,5 +23,7 @@
             android:id="@+id/Log_out_iconMenu"
             android:icon="@android:drawable/sym_call_outgoing"
             android:title="@string/log_out" />
+
+    </group>
 
 </menu>
