--- a/app/src/main/res/layout/fragment_hospital_update_profile.xml
+++ b/app/src/main/res/layout/fragment_hospital_update_profile.xml
@@ -126,7 +126,7 @@
                             android:id="@+id/etUsername"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/username"
+                            android:hint="@string/amitthecoder"
                             android:textColorHint="@color/colorPrimaryVariant"
                             tools:text="hospital"
                             android:textColor="@color/colorPrimary" />
