--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,29 +2,58 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+    android:viewportWidth="92"
+    android:viewportHeight="93">
+  <group android:scaleX="0.725448"
+      android:scaleY="0.73333335"
+      android:translateX="12.629391"
+      android:translateY="12.715741">
+    <path
+        android:pathData="M64.242,28.038V25.707C59.112,29.519 58.839,33.181 57.477,35.134C55.064,38.594 52.912,38.144 52.508,36.89C51.883,34.947 52.725,29.839 50.929,29.842C43.838,29.854 38.187,30.162 33.647,38.881C29.107,47.6 25.892,44.042 25.892,44.042C25.892,44.042 31.72,29.787 36.093,24.971C39.388,21.342 47.379,20.141 53.981,18.614C57.886,17.711 61.282,16.318 64.242,14.759V0.279H27.759V28.037H0V64.52H27.758V69.014C33.281,65.097 33.536,61.296 34.933,59.293C37.346,55.833 39.498,56.283 39.902,57.537C40.527,59.479 39.685,64.588 41.481,64.585C48.572,64.573 54.223,64.265 58.763,55.546C63.303,46.827 66.518,50.385 66.518,50.385C66.518,50.385 60.69,64.64 56.317,69.456C53.022,73.085 45.031,74.286 38.429,75.813C34.339,76.759 30.815,78.243 27.758,79.892V92.28H64.241V64.522H92V28.039H64.242V28.038ZM46,55.482C40.35,53.592 36.728,48.731 37.468,44.639C37.959,41.922 40.522,40.383 42.82,41.178C45.108,41.969 46,43.508 46,43.508C46,43.508 46.892,41.97 49.18,41.178C51.478,40.383 54.041,41.922 54.532,44.639C55.272,48.731 51.65,53.592 46,55.482Z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="13.879"
+            android:startY="78.401"
+            android:endX="78.121"
+            android:endY="14.159"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF0076C1"/>
+          <item android:offset="0.074" android:color="#FF0B82C6"/>
+          <item android:offset="0.277" android:color="#FF269ED3"/>
+          <item android:offset="0.455" android:color="#FF36AFDA"/>
+          <item android:offset="0.587" android:color="#FF3CB5DD"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M27.613,28.038H27.758V0.28H64.241V14.76C61.281,16.32 57.885,17.712 53.98,18.615C47.378,20.142 39.387,21.343 36.092,24.972C34.482,26.744 32.678,29.797 31.037,32.946C29.834,31.358 28.692,29.721 27.613,28.038ZM38.972,41.965C40.031,41.055 41.47,40.711 42.821,41.178C45.109,41.969 46.001,43.508 46.001,43.508C46.001,43.508 46.893,41.97 49.181,41.178C51.479,40.383 54.042,41.922 54.533,44.639C54.995,47.196 53.754,50.054 51.379,52.299C52.736,53.259 54.108,54.198 55.506,55.098C56.357,55.646 57.223,56.195 58.1,56.743C58.324,56.361 58.546,55.967 58.765,55.547C63.305,46.828 66.52,50.386 66.52,50.386C66.52,50.386 64.758,54.693 62.446,59.371C65.604,61.215 68.892,62.976 72.273,64.522H92V28.039H64.242V25.708C59.112,29.52 58.839,33.182 57.477,35.135C55.064,38.595 52.912,38.145 52.508,36.891C51.883,34.948 52.725,29.84 50.929,29.843C44.303,29.855 38.935,30.128 34.556,37.276C35.966,38.893 37.442,40.455 38.972,41.965Z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="12.819"
+            android:startY="79.461"
+            android:endX="78.121"
+            android:endY="14.159"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF00A482"/>
+          <item android:offset="1" android:color="#FF79DD83"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M57.879,34.453C58.949,32.398 59.656,29.115 64.241,25.708V28.039H92V54.876C82.825,51.853 74.126,47.432 66.215,41.502C63.325,39.335 60.553,36.954 57.879,34.453ZM44.84,20.72C47.802,19.92 51.028,19.299 53.981,18.616C57.886,17.713 61.282,16.32 64.242,14.761V0.281H33.193C34.98,8.025 39.689,14.698 44.84,20.72Z"
+        android:strokeAlpha="0.25"
+        android:fillAlpha="0.25">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="11.766"
+            android:startY="78.409"
+            android:endX="77.068"
+            android:endY="13.106"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF00A482"/>
+          <item android:offset="1" android:color="#FF79DD83"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
