--- a/app/src/main/res/layout/fragment_update_doctor_profile.xml
+++ b/app/src/main/res/layout/fragment_update_doctor_profile.xml
@@ -122,7 +122,7 @@
                             android:id="@+id/etUsername"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/username"
+                            android:hint="@string/amitthecoder"
                             android:textColorHint="@color/colorPrimaryVariant"
                             android:textColor="@color/colorPrimary" />
                     </com.google.android.material.textfield.TextInputLayout>
